# school-board-backend

./: .gitignore  README.md  manage.py  pyproject.toml  school_board.postman_collection.json
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
school_board/: asgi.py  settings.py  urls.py  wsgi.py
